<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_inicar_jogo"
            android:textColor="@color/colorTextPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_numero_de_discos"
            android:textColor="@color/colorTextSecondary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btn_menosDiscos"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:background="@color/beige"
                android:src="@drawable/arrow_triangle"
                android:rotation="180"
                android:contentDescription="@string/txt_seta_para_esquerda" />

            <TextView
                android:id="@+id/txtViewNumDiscos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/txt_num_inicial"
                android:textColor="@color/colorTextSecondary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_maisDiscos"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/txt_seta_para_direita"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:background="@color/beige"
                android:src="@drawable/arrow_triangle" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIniciaJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/small_border_radius"
            android:backgroundTint="@color/green"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/txt_comecar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
</LinearLayout>