<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txt_continuar_jogo"
        android:textColor="@color/colorTextPrimary"
        android:layout_marginTop="56dp"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIniciaJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/small_border_radius"
            android:backgroundTint="@color/red"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/txt_novo_jogo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinuaJogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/small_border_radius"
        android:backgroundTint="@color/green"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        android:text="@string/txt_continuar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>